Added a way to add extra data to be used in save and saveResources in ITMaterial this will make it where you can add things into material generation to be added to all materials